fix mouseclick animation repaint areas

REVIEW: 113212
BUG: 325869
FIXED-IN: 4.11.3